--- a/css/footer.css
+++ b/css/footer.css
@@ -1,12 +1,12 @@
 
 
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-  }
-  
+  } */
+/*   
   body {
     background: #f4f7fc;
     display: flex;
@@ -15,7 +15,7 @@
     justify-content: center;
     min-height: 100vh;
   }
-  
+   */
 /* footer */
 
 footer {
@@ -94,10 +94,10 @@ footer {
     opacity: 0.8;
   }
 
-  @media (max-width: 768px) {
+  /* @media (max-width: 768px) {
     .footer-content {
         flex-direction: column;
         text-align: center;
     }
-  }
+  } */
   
