--- a/css/patientlogin.css
+++ b/css/patientlogin.css
@@ -192,7 +192,7 @@
   .auth-image {
     flex: 1;
     position: relative;
-    background: url('../assets/28-0023088-64c35d0b6fc4a.png') no-repeat center;
+    background: url('../assets/hello.png') no-repeat center;
     background-size: cover;
   }
   
