--- a/css/patientregister.css
+++ b/css/patientregister.css
@@ -21,6 +21,7 @@
     align-items: center;
     width: 100%;
     height: 100vh;
+   
   }
   
   .auth-container {
@@ -31,6 +32,9 @@
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     overflow: hidden;
+    padding: 70px;
+    margin-top: 70px;
+
   }
   
   /* Left Side - Form */
