--- a/css/patientdash.css
+++ b/css/patientdash.css
@@ -148,7 +148,7 @@
   }
   
   /* Navbar */
-  .navbar {
+  /* .navbar {
     position: fixed;
     top: 0;
     left: 0;
@@ -190,7 +190,7 @@
   .logo-icon.light {
     background-color: var(--color-white);
     color: var(--color-medical-blue);
-  }
+  } */
   
   .nav-desktop {
     display: none;
